--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,10 @@
 <head>
     <title>PocketMath</title>
     <meta charset="utf-8">
-
+    <meta
+            name="viewport"
+            content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+    />
     <link rel="stylesheet" href="/styles/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
