--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="/styles/materialdesignicons.min.css">
+    <link rel="stylesheet" href="//cdn.materialdesignicons.com/3.2.89/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
