--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="ko">
 <head>
-    <title>PocketMath</title>
+    <title>보드케이브</title>
     <meta charset="utf-8">
     <meta
             name="viewport"
